# sqc

./: 404.html  MANIFEST.in  README.md  TangoCfg.txt  changelog  emulators.yaml  index.html  innosetup.iss  mkdocs.yml  mypy.ini  pyproject.toml  search.html  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: docs.yml  python-package.yml  windows-app.yml
docs/: _config.yml  index.md  instruments.md
docs/measurements/: cac.md  cint.md  cv.md  idark.md  idiel.md  index.md  istrip.md  iv.md  rint.md  rpoly.md  stripscan.md
instruments/: index.html
measurements/cac/: index.html
measurements/cint/: index.html
measurements/cv/: index.html
measurements/idark/: index.html
measurements/idiel/: index.html
measurements/istrip/: index.html
measurements/iv/: index.html
measurements/rint/: index.html
measurements/rpoly/: index.html
measurements/stripscan/: index.html
pyinstaller/: entry_point.py  requirements.txt  windows_app.spec
search/: search_index.json
sqc/: __main__.py  context.py  measurements.py  settings.py  station.py  strategy.py
sqc/controller/: environ.py  needle.py  table.py
sqc/core/: camera.py  event.py  formatting.py  functions.py  limits.py  measurement.py  request.py  resource.py  sequence.py  tango.py  transformation.py  utils.py
sqc/plugins/: __init__.py  notification.py
sqc/plugins/json_writer/: __init__.py
sqc/plugins/legacy_writer/: __init__.py
sqc/plugins/ueye_camera/: __init__.py  camera.py
sqc/view/: __init__.py  alignment.py  calibration.py  cameraview.py  dashboard.py  databrowser.py  inspectiondialog.py  loggerwidget.py  mainwindow.py  measurement.py  opticalscan.py  plotarea.py  plotwidget.py  preferences.py  profiles.py  recover.py  resources.py  sequence.py
src/sqc/: __main__.py  context.py  measurements.py  station.py  strategy.py
src/sqc/controller/: environ.py  needle.py  table.py
src/sqc/core/: event.py  formatting.py  geometry.py  pluginmanager.py  request.py  resource.py  sequence.py  utils.py
src/sqc/gui/: __init__.py  alignment.py  badstrips.py  calibration.py  cameraview.py  dashboard.py  databrowser.py  mainwindow.py  opticalscan.py  plotarea.py  plothighlighter.py  plotwidget.py  preferences.py  profiles.py  resources.py  sequence.py  utils.py
src/sqc/plugins/: __init__.py  logger_widget.py  notification.py
src/sqc/plugins/json_writer/: __init__.py
src/sqc/plugins/legacy_writer/: __init__.py
src/sqc/plugins/ueye_camera/: __init__.py  camera.py
tests/: test_core_formatting.py  test_core_functions.py  test_core_geometry.py  test_core_limits.py  test_core_request.py  test_core_timer.py  test_core_transformation.py  test_core_utils.py  test_measurements.py  test_station.py
