[project]
name = "sqc"
description = "Sensor Quality Control"
readme = "README.md"
authors = [
    {name = "Bernhard Arnold", email = "bernhard.arnold@oeaw.ac.at"},
]
requires-python = ">=3.9"
dependencies = [
    "comet @ git+https://github.com/hephy-dd/comet.git@main",
    "PyQt5==5.15.10",
    "PyQtChart==5.15.6",
    "PyYAML==6.0.1",
    "numpy==1.26.4",
    "scipy==1.12.0",
    "schema==0.7.5",
    "pyueye==4.95.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hephy-dd/sqc"
Documentation = "https://hephy-dd.github.io/sqc/"

[project.scripts]
sqc = "sqc.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sqc.assets.icons" = ["*.svg", "*.png", "*.ico"]
