[metadata]
name = sqc
version = attr: sqc.__version__
author = Bernhard Arnold
author_email = bernhard.arnold@oeaw.ac.at
description = Sensor Quality Control
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
python_requires = >=3.9
install_requires =
    comet @ git+https://github.com/hephy-dd/comet.git@v1.0.0
    PyQt5==5.15.10
    PyQtChart==5.15.6
    PyYAML==6.0.1
    numpy==1.26.4
    scipy==1.12.0
    schema==0.7.5
    pyueye==4.95.0
test_suite = tests
include_package_data = True

[options.packages.find]
exclude = tests

[options.package_data]
sqc.assets.icons =
    *.svg
    *.png
    *.ico

[options.entry_points]
console_scripts =
    sqc = sqc.__main__:main

[flake8]
exclude = env

[mypy]

[mypy-pyueye.*]
ignore_missing_imports = True

[mypy-pint.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-schema.*]
ignore_missing_imports = True

[mypy-comet.*]
ignore_missing_imports = True
